--- a/index.html
+++ b/index.html
@@ -12,58 +12,204 @@
 
 <body>
 
-	<div class="container outline">
+	<!-- OVERLAY -->
+	
+	<div class="overlay" id="supper-overlay">
 		<div class="row">
-			<div class="col-2" id="title">
-				<img src="img/title1.png" id="img-title"/>
-			</div>
-			<div class="col-2" id="curr_month">
-				<h3>WHAT DO WE DO?</h3>
-				<p>We are creating spaces that bring people together and enjoy food. For each of our events, we’ll provide the food, and you just bring yourself. You’ll meet some new people you might not normally meet, and to enjoy some eats as well.</p>
-				<h3>WHY DO WE DO THIS?</h3>
-				<p>We are a group of friends who love bringing people together through food. Sitting down and sharing food is one of the most fundamental human acts. Yet, in a world where everyone is constantly going somewhere or doing something, it’s often hard to take the time to simply sit with people and enjoy some great food.</p>
-			</div>
-		</div> 
-		<!-- <hr> -->
-		<br>
-		<div class="row">
-			<div class="col-3">
-				<div class="date_pic" style="background:linear-gradient(rgba(0, 0, 0, 0.6),rgba(0, 0, 0, 0.6)),url('img/supper.png');background-size: cover;">
-					<div class="text">Supper Club</div>
+			<div id="details">
+				<div id="head_img" style="background: url('img/supper.png')">
+					<div id="date">SUPPER CLUB</div>
+					<div class="close"></div>
 				</div>
-			</div>
-			<div class="col-3">
-				<div class="date_pic" style="background:linear-gradient(rgba(0, 0, 0, 0.6),rgba(0, 0, 0, 0.6)),url('img/hors.png');background-size: cover;">
-					<div class="text">Hors d'Oeuvres</div>
-				</div>
-			</div>
-			<div class="col-3">
-				<div class="date_pic" style="background:linear-gradient(rgba(0, 0, 0, 0.6),rgba(0, 0, 0, 0.6)),url('img/bread.png');background-size: cover;">
-					<div class="text">Breaking Bread</div>
+				<div id="content">
+					<p>We want to bring back the supper club. At supper club, we’ll craft a 3-course menu and gather 6-7 people to share it. It’s intimate, and quite frankly, may be a bit awkward in the beginning, but by the end you’ll be laughing and talking as if you’d always been friends.</p>
 				</div>
 			</div>
 		</div>
-		<hr>
-		<br>
-		<div class="row">
-			<h2>AVAILABLE LOCATIONS | SUMMER 2016</h2>
-			<a href=""><div class="col-4 location">
-				<img id="img-state" src="img/cali.png"/>San Francisco, CA
-			</div></a>
-			<a href=""><div class="col-4 location">
-				<img id="img-state" src="img/cali.png"/>South Bay, CA
-			</div></a>
-			<a href=""><div class="col-4 location">
-				<img id="img-state" src="img/nyc.png"/>New York, NY
-			</div></a>
-			<a href=""><div class="col-4 location">
-				<img id="img-state" src="img/penn.png"/>Philadelphia, PA
-			</div></a>
+	</div>
+	<div class="overlay" id="hors-overlay">
+		<div id="details">
+			<div id="head_img" style="background: url('img/hors.png')">
+				<div id="date">HORS D'OEUVRES</div>
+				<div class="close"></div>
+			</div>
+			<div id="content">
+				<p>Hors d’Oeuvres are a beautiful way to sample a variety of interesting flavors and dishes. We’ll gather 8-9 people and we’ll share some appetizers while having great conversation and enjoying each other’s company. The catch is that everyone has to bring something. It could be a story, an instrument, a drink, literally anything.</p>
+			</div>
+
 		</div>
-		<hr>
-		<br>
-		<div class="row">
-			<a href="https://docs.google.com/forms/d/1Y2_7LuklQPl3sCJw8VUhuCKd8ax5S6nCTXq_a4E6Pmw/viewform" target="_blank"><h2>SIGN UP TO OUR LISTSERVE TO GET NOTIFIED ABOUT NEW EVENTS!</h2></a>
+	</div>
+	<div class="overlay" id="bread-overlay">
+		<div id="details">
+			<div id="head_img" style="background: url('img/bread.png')">
+				<div id="date">BREAKING BREAD</div>
+				<div class="close"></div>
+			</div>
+			<div id="content">
+				<p>Bread is one of the most fundamental staples of any culture’s cuisine. Moreover, fresh baked bread just tastes amazing. At Breaking Bread, you’ll enjoy some freshly baked bread with wine and cheese pairings while relaxing and enjoying some great conversation with some random people.</p>
+			</div>
+
+		</div>
+	</div>
+
+	<div id="parent-container">
+
+		<!-- <div id="blind"></div> -->
+		<div class="container">
+			<div class="row">
+				<div class="col-2" id="title">
+					<img src="img/title1.png" id="img-title"/>
+				</div>
+				<div class="col-2" id="curr_month">
+					<h3>WHAT DO WE DO?</h3>
+					<p>We are creating spaces that bring people together and enjoy food. For each of our events, we’ll provide the food, and you just bring yourself. You’ll meet some new people you might not normally meet, and to enjoy some eats as well.</p>
+					<h3>WHY DO WE DO THIS?</h3>
+					<p>We are a group of friends who love bringing people together through food. Sitting down and sharing food is one of the most fundamental human acts. Yet, in a world where everyone is constantly going somewhere or doing something, it’s often hard to take the time to simply sit with people and enjoy some great food.</p>
+				</div>
+			</div> 
+			<!-- <hr> -->
+			<br>
+			<div class="row">
+				<div class="col-3">
+					<div class="date_pic" id="supper" style="background:linear-gradient(rgba(0, 0, 0, 0.6),rgba(0, 0, 0, 0.6)),url('img/supper.png');background-size: cover;">
+						<div class="text">Supper Club</div>
+					</div>
+				</div>
+				<div class="col-3">
+					<div class="date_pic" id="hors" style="background:linear-gradient(rgba(0, 0, 0, 0.6),rgba(0, 0, 0, 0.6)),url('img/hors.png');background-size: cover;">
+						<div class="text">Hors d'Oeuvres</div>
+					</div>
+				</div>
+				<div class="col-3">
+					<div class="date_pic" id="bread" style="background:linear-gradient(rgba(0, 0, 0, 0.6),rgba(0, 0, 0, 0.6)),url('img/bread.png');background-size: cover;">
+						<div class="text">Breaking Bread</div>
+					</div>
+				</div>
+			</div>
+			<hr>
+			<br>
+			<div class="row">
+				<h2>AVAILABLE LOCATIONS | SUMMER 2016</h2>
+				<a href=""><div class="col-4 location">
+					<img id="img-state" src="img/cali.png"/>San Francisco, CA
+				</div></a>
+				<a href=""><div class="col-4 location">
+					<img id="img-state" src="img/cali.png"/>South Bay, CA
+				</div></a>
+				<a href=""><div class="col-4 location">
+					<img id="img-state" src="img/nyc.png"/>New York, NY
+				</div></a>
+				<a href=""><div class="col-4 location">
+					<img id="img-state" src="img/penn.png"/>Philadelphia, PA
+				</div></a>
+			</div>
+			<hr>
+			<br>
+			<div class="row">
+				<a href="https://docs.google.com/forms/d/1Y2_7LuklQPl3sCJw8VUhuCKd8ax5S6nCTXq_a4E6Pmw/viewform" target="_blank"><h2>SIGN UP TO OUR LISTSERV TO GET NOTIFIED ABOUT NEW EVENTS!</h2></a>
+
+				<form action="https://docs.google.com/forms/d/1Y2_7LuklQPl3sCJw8VUhuCKd8ax5S6nCTXq_a4E6Pmw/formResponse" method="POST" id="ss-form" target="_blank" onsubmit="">
+					<div role="list">
+						<div role="listitem" class="question">
+							<div dir="auto">
+								<div>
+									<label for="entry_2061988162">
+										<div>
+											What&#39;s your name?
+											<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
+										</div>
+										<div dir="auto">
+										</div>
+									</label>
+									<input type="text" name="entry.2061988162" value="" id="entry_2061988162" dir="auto" aria-label="What&#39;s your name?  " aria-required="true" required="" title="">
+									<div id="528810679_errorMessage"></div>
+								</div>
+							</div>
+						</div>
+						<div role="listitem" class="question">
+							<div dir="auto">
+								<div>
+									<label for="entry_460341648">
+										<div>
+											What&#39;s your email?
+											<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
+										</div>
+										<div dir="auto">
+										</div>
+									</label>
+									<input type="text" name="entry.460341648" value="" id="entry_460341648" dir="auto" aria-label="What&#39;s your email?  " aria-required="true" required="" title="">
+									<div id="1978285146_errorMessage"></div>
+								</div>
+							</div>
+						</div>
+						<div role="listitem" class="question">
+							<div dir="auto">
+								<div>
+									<label for="entry_1516406192">
+										<div>
+											Where are you this summer? (select which cities)
+											<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>	
+										</div>
+										<div dir="auto">
+										</div>
+									</label>
+
+									<div role="group" aria-label="Where are you this summer? (select which cities )  " id="cities">
+										<div>
+											<label>
+												<span>
+													<input type="checkbox" name="entry.66950992" value="San Francisco (the city)" id="group_66950992_1" role="checkbox" aria-required="true">
+												</span>
+												<span>San Francisco (the city)</span>
+											</label>
+										</div>
+										<div>
+											<label>
+												<span>
+													<input type="checkbox" name="entry.66950992" value="South Bay" id="group_66950992_2" role="checkbox" ria-required="true">
+												</span>
+												<span>South Bay</span>
+											</label>
+										</div>
+										<div>
+											<label>
+												<span>
+													<input type="checkbox" name="entry.66950992" value="New York City" id="group_66950992_3" role="checkbox" aria-required="true">
+												</span>
+												<span>New York City</span>
+											</label>
+										</div>
+										<div>
+											<label>
+												<span>
+													<input type="checkbox" name="entry.66950992" value="Philadelphia" id="group_66950992_4" role="checkbox" aria-required="true">
+												</span>
+												<span>Philadelphia</span>
+											</label>
+										</div>
+										<div>
+											<label>
+												<span>
+													<input type="checkbox" name="entry.66950992" value="__other_option__" id="group_66950992_5" role="checkbox" aria-required="true">
+												</span>
+												<span>Other:</span>
+											</label>
+											<span>
+												<input type="text" name="entry.66950992.other_option_response" value="" id="other" dir="auto" aria-label="Other">
+											</span>
+										</div>
+									</div>
+									<div id="1516406192_errorMessage"></div>
+								</div>
+							</div>
+						</div>
+						<input type="hidden" name="draftResponse" value="[,,&quot;-2911762637286471915&quot;]">
+						<input type="hidden" name="pageHistory" value="0">
+						<input type="hidden" name="fbzx" value="-2911762637286471915">
+						<input type="submit" name="submit" value="Submit" id="ss-submit">
+					</div>
+				</form>
+			</div>
 		</div>
 	</div>
 
@@ -73,6 +219,41 @@
 
 <script type="text/javascript">
 $(document).ready(function() {
+	$("#supper").click(function() {
+		$("#supper-overlay").show();
+		$("#blind").show();
+		return false;
+	})
+	$("#hors").click(function() {
+		$("#hors-overlay").show();
+		$("#blind").show();
+		return false;
+	})
+	$("#bread").click(function() {
+		$("#bread-overlay").show();
+		$("#blind").show();
+		return false;
+	})
+	
+	$(".close").click(function() {
+		$("#supper-overlay").hide();
+		$("#hors-overlay").hide();
+		$("#bread-overlay").hide();
+		$("#blind").hide();
+	})
+
+	$(".overlay").click(function(e) {
+		var id_attr = $(e.target).closest('div').attr('id');
+
+		if (id_attr == "details" || id_attr == "head_img" || id_attr == "date" || id_attr == "content") {
+			return;
+		}
+		$("#supper-overlay").hide();
+		$("#hors-overlay").hide();
+		$("#bread-overlay").hide();
+		$("#blind").hide();
+	})
+
 
 });
 </script>
