Changes from Ben

--- a/index.html
+++ b/index.html
@@ -18,36 +18,43 @@
 	<div class="overlay" id="supper-overlay">
 		<div id="details">
 			<div id="head_img" style="background: url('img/supper.png')">
-				<div class="event-title">SUPPER CLUB</div>
+				<div id="event-title" class="event-title">SUPPER CLUB</div>
 				<div class="close"></div>
 			</div>
 			<div id="content">
-				<p>We want to bring back the supper club. At supper club, we’ll craft a 3-course menu and gather 6-7 people to share it. It’s intimate, and quite frankly, may be a bit awkward in the beginning, but by the end you’ll be laughing and talking as if you’d always been friends.</p>
+				<p>We want to bring back the traditional supper club, but with a twist. At Supper Club, we’ll craft a 3-course menu and gather 6-7 strangers to share it. It’s intimate, and may start out a little awkward, but by the end you’ll be laughing and talking as if you’d always been friends. This summer, sign up to hear about Supper Club in San Francisco.</p>
+			</div>
+			<div class="button">
+				SIGN UP
 			</div>
 		</div>
 	</div>
 	<div class="overlay" id="hors-overlay">
 		<div id="details">
 			<div id="head_img" style="background: url('img/hors.png')">
-				<div class="event-title">HORS D'OEUVRES</div>
+				<div id="event-title" class="event-title">HORS D'OEUVRES</div>
 				<div class="close"></div>
 			</div>
 			<div id="content">
-				<p>Hors d’Oeuvres are a beautiful way to sample a variety of interesting flavors and dishes. We’ll gather 8-9 people and we’ll share some appetizers while having great conversation and enjoying each other’s company. The catch is that everyone has to bring something. It could be a story, an instrument, a drink, literally anything.</p>
+				<p>Hors d’Oeuvres are a beautiful way to sample a variety of interesting flavors and dishes and relax after a long day. We’ll gather 8-10 people to share some appetizers while having great conversation and enjoying each other’s company. The catch is that everyone has to bring something. It could be a story, an instrument, a drink, literally anything. Sign up to hear about Hors d’Oeuvres in New York City, Philadelphia, San Francisco, and South Bay (NorCal).</p>
 			</div>
-
+			<div class="button">
+				SIGN UP
+			</div>
 		</div>
 	</div>
 	<div class="overlay" id="bread-overlay">
 		<div id="details">
 			<div id="head_img" style="background: url('img/bread.png')">
-				<div class="event-title">BREAKING BREAD</div>
+				<div id="event-title" class="event-title">BREAKING BREAD</div>
 				<div class="close"></div>
 			</div>
 			<div id="content">
-				<p>Bread is one of the most fundamental staples of any culture’s cuisine. Moreover, fresh baked bread just tastes amazing. At Breaking Bread, you’ll enjoy some freshly baked bread with wine and cheese pairings while relaxing and enjoying some great conversation with some random people.</p>
+				<p>If you look at regional cuisines around the globe, one of the only constants is bread. Historically, bread has always been the staple of the meal. Moreover, fresh baked bread just tastes amazing. At Breaking Bread, you’ll enjoy some freshly baked bread with wine and cheese pairings while relaxing and enjoying some great conversation with some random people. Sign up to hear about Breaking Bread in South Bay (NorCal).</p>
 			</div>
-
+			<div class="button">
+				SIGN UP
+			</div>
 		</div>
 	</div>
 
@@ -59,10 +66,11 @@
 				<img src="img/title1.png" id="img-title"/>
 			</div>
 			<div class="col-2" id="about">
-				<h3>WHAT DO WE DO?</h3>
-				<p>We are creating spaces that bring people together and enjoy food. For each of our events, we’ll provide the food, and you just bring yourself. You’ll meet some new people you might not normally meet, and to enjoy some eats as well.</p>
-				<h3>WHY DO WE DO THIS?</h3>
-				<p>We are a group of friends who love bringing people together through food. Sitting down and sharing food is one of the most fundamental human acts. Yet, in a world where everyone is constantly going somewhere or doing something, it’s often hard to take the time to simply sit with people and enjoy some great food.</p>
+				<h3>WHAT?</h3>
+				<p class="about-p">Food with Friends is a space that brings people together to enjoy food and each other’s company. We’ll cook the food, you just bring yourself. Each experience is uniquely crafted by the people that attend and the food served.</p>
+				<h3>WHY?</h3>
+				<p class="about-p">We are a group of friends who love cooking and are fascinated by food’s ability to bring people together. We started doing this at our university, and we wanted to continue this summer when we went to different cities across the country to work. We believe that taking the time to sit down and share food is one of the most fundamental human acts, yet is unfortunately rare in these fast-paced times.</p>
+				<span id="sign-up-link">SIGN UP TO STAY UPDATED</span>
 			</div>
 		</div> 
 		<br>
@@ -86,7 +94,7 @@
 		<hr>
 		<br>
 		<div class="row">
-			<h2>AVAILABLE LOCATIONS | SUMMER 2016</h2>
+			<h2>UPCOMING MEALS - SUMMER 2016</h2>
 			<a href="" target="_blank"><div class="col-4 location inactive-click" id="inactive">
 				<img id="img-state" class="inactive-state" src="img/cali.png"/>San Francisco, CA
 				<hr>
@@ -95,7 +103,7 @@
 			<a href="https://docs.google.com/forms/d/1eE6VFna17wImsPFwNfhTGvFi41B6_Z92136R3ilFcdY/viewform" target="_blank"><div class="col-4 location">
 				<img id="img-state" src="img/cali.png"/>South Bay, CA
 				<hr>
-				<div class="location-info">Sign up for Hors d'Oeuvres this week!</div>
+				<div class="location-info">CLICK HERE to sign up for Hors d'Oeuvres on 5/19 at 8 PM in Cupertino!</div>
 			</div></a>
 			<a href="" target="_blank"><div class="col-4 location inactive-click" id="inactive">
 				<img id="img-state" class="inactive-state" src="img/nyc.png"/>New York, NY
@@ -111,8 +119,8 @@
 		<br>
 		<hr>
 		<br>
-		<div class="row">
-			<h2>SIGN UP TO OUR LISTSERV TO GET NOTIFIED ABOUT NEW EVENTS!</h2>
+		<div class="row" id="google-form">
+			<h2>SIGN UP TO STAY UPDATED/HEAR ABOUT UPCOMING MEALS!</h2>
 
 			<form action="https://docs.google.com/forms/d/1Y2_7LuklQPl3sCJw8VUhuCKd8ax5S6nCTXq_a4E6Pmw/formResponse" method="POST" id="ss-form" target="_blank" onsubmit="">
 				<div role="list">
@@ -150,7 +158,7 @@
 											<span>
 												<input type="checkbox" name="entry.66950992" value="San Francisco (the city)" id="group_66950992_1" role="checkbox" aria-required="true">
 											</span>
-											<span>San Francisco (the city)</span>
+											<span>San Francisco (in the city)</span>
 										</label>
 									</div>
 									<div>
@@ -200,6 +208,12 @@
 				</div>
 			</form>
 		</div>
+		<hr>
+		<br>
+		<div class="footer">
+			Get in contact with us at <a href="mailto:foodwithfriends@gmail.com">eatfoodwithfriends@gmail.com</a>
+		</div>
+		<br>
 	</div>
 
 </body>
@@ -239,12 +253,23 @@ $(document).ready(function() {
 		$("#blind").hide();
 	})
 
+	$('.button').click(function() {
+		scrollToSignUp();
+	});
+
 	$(".overlay").click(function(e) {
 		var id_attr = $(e.target).closest('div').attr('id');
 
-		if (id_attr == "details" || id_attr == "head_img" || id_attr == "date" || id_attr == "content") {
+		if (id_attr == "details" || id_attr == "head_img" || id_attr == "date" || id_attr == "content" || id_attr == "button" || id_attr == "event-title") {
 			return;
 		}
+
+		var class_attr = $(e.target).closest('div').attr('class');
+
+		if (class_attr == "button") {
+			return;
+		}
+
 		$("#supper-overlay").hide();
 		$("#hors-overlay").hide();
 		$("#bread-overlay").hide();
@@ -253,19 +278,38 @@ $(document).ready(function() {
 		$("body").removeClass("noscroll");
 	})
 
+	$('#sign-up-link').click(function() {
+		scrollToSignUp();
+	});
+
 	$('.inactive-click').click(false);
 
 	$(document).keyup(function(e) {
 	  if (e.keyCode === 27) {
-	  	$("#supper-overlay").hide();
+	  	closeDetail();
+	  }
+	});
+
+	function scrollToSignUp() {
+		closeDetail();
+
+		// Scroll
+		$('html, body').animate({
+		    scrollTop: $("#google-form").offset().top
+		}, 700);
+
+		// Focus on email text field
+		$('#entry_460341648').focus();
+	}
+
+	function closeDetail() {
+		$("#supper-overlay").hide();
 		$("#hors-overlay").hide();
 		$("#bread-overlay").hide();
 		$("#blind").hide();
 
 		$("body").removeClass("noscroll");
-	  	
-	  }
-	});
+	}
 
 });
 
